--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<title>Octo Marketing</title>
 	<link rel="shortcut icon" type="image/png" href="images/logo favicon.png"/>
 	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" />
-	<link href="https://fonts.googleapis.com/css?family=Flamenco|Gruppo" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Flamenco|Gruppo" rel="stylesheet"/> 
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/animat/animate.min.css" />
 	<link rel="stylesheet" href="css/fancybox/jquery.fancybox.css" />
